--- a/index.html
+++ b/index.html
@@ -1,239 +1,196 @@
-/* === FILE: index.html === */
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fossil World</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header>
-    <h1>Fossil World</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="intro">
-      <h2>Welcome to the World of Fossils</h2>
-      <p>Discover the wonders of prehistoric life preserved through time. Dive into our fossil gallery, learn about how fossils are formed, and get in touch!</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Fossil World</p>
-  </footer>
-</body>
-</html>
-
-/* === FILE: gallery.html === */
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fossil Gallery</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header>
-    <h1>Fossil Gallery</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="gallery">
-      <h2>Fossil Types</h2>
-      <div class="image-grid">
-        <img src="images/fossil1.jpg" alt="Fossil 1">
-        <img src="images/fossil2.jpg" alt="Fossil 2">
-        <img src="images/fossil3.jpg" alt="Fossil 3">
-      </div>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Fossil World</p>
-  </footer>
-</body>
-</html>
-
-/* === FILE: about.html === */
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Fossils</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header>
-    <h1>About Fossils</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h2>What Are Fossils?</h2>
-      <p>Fossils are the preserved remains or traces of organisms from the remote past. They are found in sedimentary rock layers and help us learn about ancient life forms and environments.</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Fossil World</p>
-  </footer>
-</body>
-</html>
-
-/* === FILE: contact.html === */
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header>
-    <h1>Contact Us</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h2>Send a Message</h2>
-      <form action="php/contact.php" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-
-        <button type="submit">Send</button>
-      </form>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Fossil World</p>
-  </footer>
-</body>
-</html>
-
-/* === FILE: css/style.css === */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  background-color: #f9f9f9;
-  color: #333;
-}
-
-header {
-  background-color: #333;
-  color: white;
-  padding: 1rem;
-  text-align: center;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-}
-
-nav a {
-  color: white;
-  text-decoration: none;
-}
-
-main {
-  padding: 2rem;
-}
-
-.image-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1rem;
-}
-
-.image-grid img {
-  width: 100%;
-  border-radius: 8px;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  max-width: 500px;
-  margin: auto;
-}
-
-button {
-  padding: 0.5rem;
-  background-color: #333;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #555;
-}
-
-footer {
-  background-color: #eee;
-  text-align: center;
-  padding: 1rem;
-  margin-top: 2rem;
-}
-
-/* === FILE: php/contact.php === */
-<?php
-if ($_SERVER["REQUEST_METHOD"] == "POST") {
-    $name = htmlspecialchars($_POST['name']);
-    $email = htmlspecialchars($_POST['email']);
-    $message = htmlspecialchars($_POST['message']);
-
-    $to = "your@email.com"; // Replace with your email
-    $subject = "Message from $name";
-    $body = "Name: $name\nEmail: $email\n\nMessage:\n$message";
-    $headers = "From: $email";
-
-    if (mail($to, $subject, $body, $headers)) {
-        echo "<p>Thank you for your message, $name!</p>";
-    } else {
-        echo "<p>Sorry, something went wrong. Please try again later.</p>";
+  <title>Elegant Jewelry Store</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-image: url('https://images.unsplash.com/photo-1606312619344-b6828f5ec2b5');
+      background-size: cover;
+      background-attachment: fixed;
+      color: #333;
     }
-} else {
-    echo "<p>Invalid request.</p>";
-}
-?>
+
+    header {
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #444;
+      font-weight: bold;
+    }
+
+    .container {
+      padding: 40px;
+      background-color: rgba(255, 255, 255, 0.9);
+      max-width: 1200px;
+      margin: 40px auto;
+      border-radius: 10px;
+    }
+
+    .filters {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+
+    .filters input, .filters select {
+      padding: 8px;
+      width: 48%;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .product {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .product img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .product button {
+      padding: 10px 20px;
+      background-color: #d4af37;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      margin-top: 10px;
+      cursor: pointer;
+    }
+
+    footer {
+      background-color: rgba(255, 255, 255, 0.95);
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      margin-top: 40px;
+    }
+
+    .video-container {
+      text-align: center;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1>Elegant Jewelry</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#products">Products</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <div class="container">
+    <div class="filters">
+      <input type="text" id="search" placeholder="Search for jewelry...">
+      <select id="sort">
+        <option value="">Sort by</option>
+        <option value="price-asc">Price: Low to High</option>
+        <option value="price-desc">Price: High to Low</option>
+      </select>
+    </div>
+
+    <div class="products" id="productList">
+      <div class="product" data-name="Gold Necklace" data-price="250">
+        <img src="https://images.unsplash.com/photo-1590080875516-851fc0b098f0" alt="Gold Necklace">
+        <h3>Gold Necklace</h3>
+        <p>Elegant 24K gold necklace perfect for special occasions.</p>
+        <p>$250</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product" data-name="Silver Bracelet" data-price="120">
+        <img src="https://images.unsplash.com/photo-1589994965851-d3d48c3d812b" alt="Silver Bracelet">
+        <h3>Silver Bracelet</h3>
+        <p>Handcrafted silver bracelet with intricate designs.</p>
+        <p>$120</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product" data-name="Diamond Ring" data-price="850">
+        <img src="https://images.unsplash.com/photo-1611223430401-835ef47b87a3" alt="Diamond Ring">
+        <h3>Diamond Ring</h3>
+        <p>Luxury ring featuring a premium cut diamond.</p>
+        <p>$850</p>
+        <button>Add to Cart</button>
+      </div>
+    </div>
+
+    <div class="video-container">
+      <h2>Watch Our Jewelry Making Process</h2>
+      <video width="80%" controls>
+        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </div>
+
+  <footer>
+    &copy; 2025 Elegant Jewelry. All rights reserved.
+  </footer>
+
+  <script>
+    const searchInput = document.getElementById('search');
+    const sortSelect = document.getElementById('sort');
+    const productList = document.getElementById('productList');
+
+    searchInput.addEventListener('input', () => {
+      const keyword = searchInput.value.toLowerCase();
+      const products = document.querySelectorAll('.product');
+
+      products.forEach(product => {
+        const name = product.getAttribute('data-name').toLowerCase();
+        product.style.display = name.includes(keyword) ? 'block' : 'none';
+      });
+    });
+
+    sortSelect.addEventListener('change', () => {
+      const products = Array.from(document.querySelectorAll('.product'));
+      const sortBy = sortSelect.value;
+
+      products.sort((a, b) => {
+        const priceA = parseFloat(a.getAttribute('data-price'));
+        const priceB = parseFloat(b.getAttribute('data-price'));
+
+        return sortBy === 'price-asc' ? priceA - priceB : sortBy === 'price-desc' ? priceB - priceA : 0;
+      });
+
+      productList.innerHTML = '';
+      products.forEach(p => productList.appendChild(p));
+    });
+  </script>
+</body>
+
+</html>
+
