--- a/index.html
+++ b/index.html
@@ -1,196 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Elegant Jewelry Store</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-image: url('https://images.unsplash.com/photo-1606312619344-b6828f5ec2b5');
-      background-size: cover;
-      background-attachment: fixed;
-      color: #333;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Complete Website</title>
+    <!-- Include all CSS and JavaScript here -->
+    <style>
+        /* Basic CSS styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            line-height: 1.6;
+        }
+        
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
-    header {
-      background-color: rgba(255, 255, 255, 0.95);
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
+        nav {
+            background-color: #f8f9fa;
+            padding: 1rem;
+            margin-bottom: 2rem;
+        }
 
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-    }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: space-around;
+        }
 
-    nav a {
-      text-decoration: none;
-      color: #444;
-      font-weight: bold;
-    }
+        nav a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            padding: 0.5rem 1rem;
+        }
 
-    .container {
-      padding: 40px;
-      background-color: rgba(255, 255, 255, 0.9);
-      max-width: 1200px;
-      margin: 40px auto;
-      border-radius: 10px;
-    }
+        nav a:hover {
+            background-color: #ddd;
+            border-radius: 4px;
+        }
 
-    .filters {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-    }
+        .header {
+            text-align: center;
+            padding: 2rem 0;
+            color: #fff;
+            background-color: #333;
+        }
 
-    .filters input, .filters select {
-      padding: 8px;
-      width: 48%;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
+        .section {
+            margin-bottom: 2rem;
+            padding: 1rem;
+            background-color: #f8f9fa;
+        }
 
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 20px;
-    }
-
-    .product {
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-
-    .product img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-    }
-
-    .product button {
-      padding: 10px 20px;
-      background-color: #d4af37;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-
-    footer {
-      background-color: rgba(255, 255, 255, 0.95);
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      margin-top: 40px;
-    }
-
-    .video-container {
-      text-align: center;
-      margin-top: 40px;
-    }
-  </style>
+        .footer {
+            text-align: center;
+            padding: 2rem;
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
 </head>
-
 <body>
-  <header>
-    <h1>Elegant Jewelry</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#products">Products</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
     </nav>
-  </header>
 
-  <div class="container">
-    <div class="filters">
-      <input type="text" id="search" placeholder="Search for jewelry...">
-      <select id="sort">
-        <option value="">Sort by</option>
-        <option value="price-asc">Price: Low to High</option>
-        <option value="price-desc">Price: High to Low</option>
-      </select>
-    </div>
+    <header class="header">
+        <h1>Complete Website</h1>
+    </header>
 
-    <div class="products" id="productList">
-      <div class="product" data-name="Gold Necklace" data-price="250">
-        <img src="https://images.unsplash.com/photo-1590080875516-851fc0b098f0" alt="Gold Necklace">
-        <h3>Gold Necklace</h3>
-        <p>Elegant 24K gold necklace perfect for special occasions.</p>
-        <p>$250</p>
-        <button>Add to Cart</button>
-      </div>
-      <div class="product" data-name="Silver Bracelet" data-price="120">
-        <img src="https://images.unsplash.com/photo-1589994965851-d3d48c3d812b" alt="Silver Bracelet">
-        <h3>Silver Bracelet</h3>
-        <p>Handcrafted silver bracelet with intricate designs.</p>
-        <p>$120</p>
-        <button>Add to Cart</button>
-      </div>
-      <div class="product" data-name="Diamond Ring" data-price="850">
-        <img src="https://images.unsplash.com/photo-1611223430401-835ef47b87a3" alt="Diamond Ring">
-        <h3>Diamond Ring</h3>
-        <p>Luxury ring featuring a premium cut diamond.</p>
-        <p>$850</p>
-        <button>Add to Cart</button>
-      </div>
-    </div>
+    <main class="container">
+        <!-- Section 1 -->
+        <section class="section">
+            <h2>Welcome to Our Website</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
 
-    <div class="video-container">
-      <h2>Watch Our Jewelry Making Process</h2>
-      <video width="80%" controls>
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </div>
+        <!-- Section 2 -->
+        <section class="section">
+            <h2>Our Services</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <h3>Service 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="service-card">
+                    <h3>Service 2</h3>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+                </div>
+                <div class="service-card">
+                    <h3>Service 3</h3>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+                </div>
+            </div>
+        </section>
 
-  <footer>
-    &copy; 2025 Elegant Jewelry. All rights reserved.
-  </footer>
+        <!-- Section 3 -->
+        <section class="section">
+            <h2>Contact Us</h2>
+            <form id="contactForm">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" onclick="handleSubmit(event)">Send Message</button>
+            </form>
+        </section>
+    </main>
 
-  <script>
-    const searchInput = document.getElementById('search');
-    const sortSelect = document.getElementById('sort');
-    const productList = document.getElementById('productList');
+    <footer class="footer">
+        <p>&copy; 2023 Complete Website. All rights reserved.</p>
+    </footer>
 
-    searchInput.addEventListener('input', () => {
-      const keyword = searchInput.value.toLowerCase();
-      const products = document.querySelectorAll('.product');
+    <!-- Include JavaScript here -->
+    <script>
+        // Basic JavaScript functionality
+        function handleSubmit(event) {
+            event.preventDefault();
+            alert('Thank you for your message!');
+            document.getElementById('contactForm').reset();
+        }
 
-      products.forEach(product => {
-        const name = product.getAttribute('data-name').toLowerCase();
-        product.style.display = name.includes(keyword) ? 'block' : 'none';
-      });
-    });
-
-    sortSelect.addEventListener('change', () => {
-      const products = Array.from(document.querySelectorAll('.product'));
-      const sortBy = sortSelect.value;
-
-      products.sort((a, b) => {
-        const priceA = parseFloat(a.getAttribute('data-price'));
-        const priceB = parseFloat(b.getAttribute('data-price'));
-
-        return sortBy === 'price-asc' ? priceA - priceB : sortBy === 'price-desc' ? priceB - priceA : 0;
-      });
-
-      productList.innerHTML = '';
-      products.forEach(p => productList.appendChild(p));
-    });
-  </script>
+        // Add keyboard navigation support
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                handleSubmit(event);
+            }
+        });
+    </script>
 </body>
-
 </html>
-
